--- a/fhir/package.json
+++ b/fhir/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^11.0.8",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chat-widget-react-18": "^1.0.0",
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
